[metadata]
name = dfsimage
version = 0.9rc1
url = https://github.com/monkeyman79/dfsimage
author = Tadek Kijkowski
author_email = tkijkowski@gmail.com
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment::Console
description = BBC Micro Acorn DFS floppy disk image maintenance utility
long_description = file: description.rst
long_description_content_type = text/x-rst

[options]
python_requires = >=3.8
packages = find:
